--- a/.github/workflows/deployments1.yml
+++ b/.github/workflows/deployments1.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Lint
-        run: npm lint
+        run: npm run lint
       - name: Test Code
         run: npm run test
       - name: Build Code
