--- a/.github/workflows/deployments2.yml
+++ b/.github/workflows/deployments2.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubutu-latest
     steps:
       - name: Get Code
-        uses: action/checkout@v3
+        uses: actions/checkout@v3
       - name: Build Code
         run: npm run build
       - name: Deploy Code
