--- a/.github/workflows/deployments2.yml
+++ b/.github/workflows/deployments2.yml
@@ -24,6 +24,8 @@ jobs:
     steps:
       - name: Get Code
         uses: actions/checkout@v3
+      - name: Install Dependencies
+        run: npm ci
       - name: Build Code
         run: npm run build
       - name: Deploy Code
